# ExcavatorUI_Qt3D

./: .gitignore  BUILD_FIX_README.md  CMakeLists.txt  Excavator.qml  ExcavatorView.qml  Main.qml  MapView.qml  README.md  RESPONSIVE_GUIDE.md  URGENT_BUILD_FIX.md  clean_and_build.bat  main.cpp
config/: bathymetry_config.json
docs/: BATHYMETRY_FEATURE.md  OFFLINE_MAP_SETUP.md  VRT_SETUP.md  WINDOWS_GDAL_SETUP.md
maps/: README.md
meshes/: obj115_mesh.mesh  obj117_mesh.mesh  obj125_mesh.mesh  obj131_mesh.mesh  obj135_mesh.mesh  obj137_mesh.mesh  obj13_mesh.mesh  obj141_mesh.mesh  obj142_mesh.mesh  obj147_mesh.mesh  obj148_mesh.mesh  obj149_mesh.mesh  obj153_mesh.mesh  obj158_mesh.mesh  obj160_mesh.mesh  obj161_mesh.mesh  obj166_mesh.mesh  obj174_mesh.mesh  obj181_mesh.mesh  obj18_mesh.mesh  obj196_mesh.mesh  obj201_mesh.mesh  obj204_mesh.mesh  obj206_mesh.mesh  obj208_mesh.mesh  obj209_mesh.mesh  obj212_mesh.mesh  obj215_mesh.mesh  obj218_mesh.mesh  obj219_mesh.mesh  obj229_mesh.mesh  obj233_mesh.mesh  obj239_mesh.mesh  obj23_mesh.mesh  obj240_mesh.mesh  obj242_mesh.mesh  obj247_mesh.mesh  obj253_mesh.mesh  obj258_mesh.mesh  obj265_mesh.mesh  (+22 more)
resources/icons/: app_icon.rc
resources/meshes/: caterpillar_390F_LME__ARM_390F_LME_mesh.mesh  caterpillar_390F_LME__ARM_CYLINDER_BORE_390F_LME_mesh.mesh  caterpillar_390F_LME__ARM_CYLINDER_PIN_390F_LME_001_mesh.mesh  caterpillar_390F_LME__ARM_CYLINDER_PIN_390F_LME__PIN_BOLT_390F_mesh.mesh  caterpillar_390F_LME__ARM_CYLINDER_PIN_390F_LME__PIN_BOLT_3_mesh.mesh  caterpillar_390F_LME__ARM_CYLINDER_PIN_390F_LME_mesh.mesh  caterpillar_390F_LME__ARM_PIN_390F_LME__PIN_BOLT_390F_mesh.mesh  caterpillar_390F_LME__ARM_PIN_390F_LME_mesh.mesh  caterpillar_390F_LME__ARM_PISTON_ROB_390F_LME__ARM_ROB_CLEVIS_3_mesh.mesh  caterpillar_390F_LME__ARM_PISTON_ROB_390F_LME_mesh.mesh  caterpillar_390F_LME__BOOM_390F_LME__BOOM_CYLINDER_PIN_390F__PI_mesh.mesh  caterpillar_390F_LME__BOOM_390F_LME__BOOM_CYLINDER_PIN_390F_mesh.mesh  caterpillar_390F_LME__BOOM_390F_LME_mesh.mesh  caterpillar_390F_LME__BOOM_BORE_PIN_390F__PIN_BOLT_390F_mesh.mesh  caterpillar_390F_LME__BOOM_BORE_PIN_390F_mesh.mesh  caterpillar_390F_LME__BOOM_CYLINDER_BORE_390F_LME_mesh.mesh  caterpillar_390F_LME__BOOM_PIN_390F__PIN_BOLT_390F_mesh.mesh  caterpillar_390F_LME__BOOM_PIN_390F_mesh.mesh  caterpillar_390F_LME__BOOM_PISTON_ROB_390F_LME__BOOM_ROB_CLEVIS_mesh.mesh  caterpillar_390F_LME__BOOM_PISTON_ROB_390F_LME_mesh.mesh  caterpillar_390F_LME__BUCKET_390F_LME__BUCKET_BOLT_390F_mesh.mesh  caterpillar_390F_LME__BUCKET_390F_LME_mesh.mesh  caterpillar_390F_LME__BUCKET_CYLINDER_BORE_390F_LME_mesh.mesh  caterpillar_390F_LME__BUCKET_CYLINDER_PIN_390F_LME__PIN_BOLT_39_mesh.mesh  caterpillar_390F_LME__BUCKET_CYLINDER_PIN_390F_LME_mesh.mesh  caterpillar_390F_LME__BUCKET_LINK_390F_LME_mesh.mesh  caterpillar_390F_LME__BUCKET_PIN_390F_LME_001_mesh.mesh  caterpillar_390F_LME__BUCKET_PIN_390F_LME_002_mesh.mesh  caterpillar_390F_LME__BUCKET_PIN_390F_LME_004_mesh.mesh  caterpillar_390F_LME__BUCKET_PIN_390F_LME__PIN_BOLT_390F_001_mesh.mesh  caterpillar_390F_LME__BUCKET_PIN_390F_LME__PIN_BOLT_390F_002_mesh.mesh  caterpillar_390F_LME__BUCKET_PIN_390F_LME__PIN_BOLT_390F_003_mesh.mesh  caterpillar_390F_LME__BUCKET_PIN_390F_LME__PIN_BOLT_390F_mesh.mesh  caterpillar_390F_LME__BUCKET_PIN_390F_LME_mesh.mesh  caterpillar_390F_LME__BUCKET_PISTON_ROB_390F_LME__BUCKET_ROB_CL_mesh.mesh  caterpillar_390F_LME__BUCKET_PISTON_ROB_390F_LME_mesh.mesh  caterpillar_390F_LME__CENTER_BEARING_390F__BEARING_BOLT_390F_mesh.mesh  caterpillar_390F_LME__CENTER_BEARING_390F_mesh.mesh  caterpillar_390F_LME__LEFT_TRACK_390F__CHAIN_390F__TRACK_BU_mesh.mesh  caterpillar_390F_LME__LEFT_TRACK_390F__CHAIN_390F__TRACK_SH_001_mesh.mesh  (+185 more)
scripts/: download_tiles.py
src/: AppRoot.qml  BathymetricCell.qml  BathymetricPlane.qml  ExcavatorView.qml  Grid3D.qml  GridLine.qml  LoginView.qml  LoginWindow.qml  Main.qml  RegisterView.qml  RegisterWindow.qml  SeaLevelFrame.qml
src/auth/: AuthService.cpp  AuthService.h  LoginContainer.qml  LoginView.qml  LoginWindow.qml  RegisterView.qml
src/bathymetry/: BathymetricDataLoader.cpp  BathymetricDataLoader.h  BathymetricMeshGenerator.cpp  BathymetricMeshGenerator.h  TileLoadTask.cpp  TileLoadTask.h
src/components/: BathymetricLegend.qml  BathymetricMapCanvas.qml  BottomNavigation.qml  BucketDepthIndicator.qml  Excavator.qml  LoadingScreen.qml  MapDecorations.qml  ScreenSaver.qml  SplashScreen.qml  StatusBar.qml  StepProgressIndicator.qml
src/config/: ConfigManager.cpp  ConfigManager.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/geotiff/: GeoTIFFLoader.cpp  GeoTIFFLoader.h
src/i18n/: TranslationService.cpp  TranslationService.h
src/map/: MapTileManager.cpp  MapTileManager.h  OfflineTileManager.cpp  OfflineTileManager.h  TileImageProvider.cpp  TileImageProvider.h
src/sensors/: IMUMockService.cpp  IMUMockService.h
src/theme/: ThemeManager.cpp  ThemeManager.h
src/tracking/: ExcavatorTracker.cpp  ExcavatorTracker.h
src/views/: AlarmConfigPage.qml  AlarmPage.qml  AreaPage.qml  BathymetricMapView.qml  BathymetricMapView_V2.qml  BathymetricMapView_V3.qml  CalibrationConfigPage.qml  ConfigDashboard.qml  DigAreaConfigPage.qml  ExcavatorConfigPage.qml  ExcavatorView.qml  HomePage.qml  Main.qml  MapConfigPage.qml  MapPage.qml  MapView.qml  OfflineMapView.qml  ProfileView.qml  SafetyConfigPage.qml  SettingsPage.qml  SimpleMapView.qml  UserManagementView.qml
static_maps/: README.md
translations/: en_US.json  excavator_en_US.ts  excavator_tr_TR.ts  tr_TR.json
